# EzTest-Template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
test/: CMakeLists.txt
test/eztest/: README.md
